Clase 05-08 Adaptamos el front completamente con el back.

--- a/web_personal/core/templates/core/base.html
+++ b/web_personal/core/templates/core/base.html
@@ -18,11 +18,10 @@
   </head>
 
   <body>
-
     <!-- Navegación -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Juan Pérez</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Juan Pérez</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menú
           <i class="fa fa-bars"></i>
@@ -47,14 +46,15 @@
     </nav>
 
     <!-- Cabecera -->
-    <header class="masthead" style="background-image: url({% static 'core/img/home-bg.jpg' %})">
+    <header class="masthead" style="background-image: url('{% block backgroundimage %}{% endblock backgroundimage %}')">
+      {% comment %} {% if request.path == '/'%}class="masthead"{% endif %} meto un if donde quiera !!! {% endcomment %}
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>Juan Pérez</h1>
-              <span class="subheading">Ingeniero Industrial</span>
+            {% block header %}
+            {% endblock header %}
             </div>
           </div>
         </div>
@@ -62,9 +62,17 @@
     </header>
 
     <!-- Contenido Principal -->
-    {% block content %}
-    {% endblock content %}
+    <div class="container">
+      {% block content %}
+      {% endblock content %}
+    </div>
     <!-- Contenido Principal -->
+
+
+    {% if request.path != '/'%}
+      <hr>    
+    {% endif %}
+
 
     <!-- Pié de página -->
     <footer>
