--- a/web_personal/core/templates/core/contact.html
+++ b/web_personal/core/templates/core/contact.html
@@ -1,9 +1,18 @@
 {% extends "core/base.html" %}
-
-{% block title %}
-    Contacto
-{% endblock title %}
-
+{% load static %}
+{% block title %}Contacto{% endblock title %}
+{% block header %}
+    <h1>Contacto</h1>
+    <span class="subheading">Asesoría</span>
+{% endblock header %}
+{% block backgroundimage %}{% static 'core/img/contact.jpg' %}{% endblock backgroundimage %}
 {% block content %}
-    <h2>Contacto</h2>
+    <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
+            <br>
+            <p><b>Teléfono:</b> +09 876 543 210</p>
+            <p><b>Honorarios:</b> 60€/h (precio base)</p>
+        </div>
+    </div>
 {% endblock content %}
