--- a/web_personal/core/templates/core/home.html
+++ b/web_personal/core/templates/core/home.html
@@ -1,3 +1,10 @@
 {% extends "core/base.html" %}
 
 {% block title %}Home{% endblock title %} 
+{% load static %}
+{% block header %}
+    <h1>{{name}} {{lastname}}</h1>
+    <span class="subheading">Software Developer</span>
+{% endblock header %}
+
+{% block backgroundimage %}{% static 'core/img/home.jpg' %}{% endblock backgroundimage %}
